# craftflow-backend

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/v1/: __init__.py  creation.py  polishing.py  router.py  tasks.py  ws.py  ws_handler.py
app/core/: README.md  __init__.py  config.py  exceptions.py  logger.py
app/graph/: __init__.py
app/graph/common/: __init__.py  llm_factory.py  prompts.py
app/graph/creation/: __init__.py  builder.py  nodes.py  prompts.py  state.py
app/graph/polishing/: __init__.py  builder.py  debate_graph.py  nodes.py  prompts.py  state.py
app/graph/tools/: __init__.py  retriever.py  sandbox.py  search.py  validators.py
app/schemas/: __init__.py  request.py  response.py  ws_message.py
app/services/: __init__.py  checkpoint_cleaner.py  checkpointer.py  creation_svc.py  polishing_svc.py  task_broadcaster.py  task_store.py
docs/: CraftFlow 工具调用.md  CraftFlow 接口流程图解.md  CraftFlow 架构设计方案.md  CraftFlow 核心开发蓝图与架构规范.md  CraftFlow 设计补充文档.md  Creation Graph 创作流程详解.md  Polishing Graph 润色流程详解.md
docs/plan/: dev_plan.md
docs/plan/supplementar/: polishing_mode2_mode3_fix.md  prompt_management_strategy.md
docs/plan/task_completion/: task10_completion_report.md  task11_completion_report.md  task12_completion_report.md  task13_completion_report.md  task14_completion_report.md  task15_completion_report.md  task16_completion_report.md  task1_completion_report.md  task2_completion_report.md  (+7 more)
logs/: .gitkeep
scripts/: check_config.py  check_tools.py  dev.ps1  dev.sh  test_exceptions.py  test_llm_factory.py  verify_installation.py
tests/: test_exceptions.py  test_main.py  test_schemas.py
tests/test_api/: __init__.py  test_creation_api.py  test_polishing_api.py
tests/test_graph/: __init__.py  test_creation_graph.py  test_creation_nodes.py  test_debate_graph.py  test_polishing_graph.py  test_polishing_nodes.py  test_polishing_state.py
tests/test_services/: __init__.py  test_checkpointer.py  test_creation_svc.py  test_polishing_svc.py
(+5 files in other folders)
